  entities may have doctests, or themselves be tests, but not
  both. Thanks to John J Lee for the bug report and patch (Issue #84).
- Made __file__ available in non-python-module doctests.
- Fixed bug that made it impossible for plugins to exclude package
  directories from test discovery (Issue #89). Thanks to John J Lee
  for the bug report and patch.
- Fixed inconsistencies in many interfaces and docs. Thanks to John J
  Lee for many bug reports.

0.10.0b1

- Added support for a description attribute on tests in function and
  method test cases.  Most useful for generators: set the description
  attribute on the yielded function.
- Fixed incorrect signature of addSuccess() method in
  IPluginInterface. Thanks to nosexunit for the bug report. (Issue
  #68).
- Fixed isclass() function in nose.util so that it will not raise an
  exception when examining instances that have no accessible __bases__
  attribute. (Issue #65).
- Fixed passing of tests to result; the test itself and not the
  wrapper was being passed, resulting in test description plugin hooks
  not being called. (Issue #71).
- Fixed bugs in FailureDetail and Capture plugins, and plugin manager
  and proxy uses of chainable plugin calls. Thanks to Ian Bicking for
  the bug report (Issue #72).
- Improved documentation.

0.10.0a2

- Changed entry point name to nose.plugins.0.10 -- dashes and other
  non-word characters besides . are not allowed in entry point names.
  (Issue #67)
- Fixed loading of plugins from that entry point.
- Fixed backwards-compatibility issue in nose.util (is_generator was
  renamed isgenerator). (Issue #64)
- Fixed bug in --logging-config option. Thanks to anton_kr... at yahoo
  com for the bug report. (Issue #62)
- Fixed bug in handling of --where argument: first --where was not
  passed to loader as workingDir. Thanks to nosexunit for the bug
  report. (Issue #63).

0.10.0a1

- Rewrote test loader to be more drop-in compatible with